--- a/style.css
+++ b/style.css
@@ -1,10 +1,79 @@
-*{
-    font-family: 'Poppins';
+.body{
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
 }
 
 .height-header{
     height: 60px;
+    z-index: 99;
 }
 .header-padding{
     padding: 20px 100px;
+}
+
+.nav-a{
+    text-decoration: none;
+  
+    font-size: 25px;
+    margin-left: 20px;
+    font-weight: 600;
+}
+.a:hover{
+    border-bottom: 4px solid #fff;
+    transition: .5s linear;
+}
+
+.background{
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    filter: blur(5px);
+    background-image: url('./media/pexels-eberhard-grossgasteiger-1612351.jpg');
+}
+.icon{
+    display: inline;
+}
+.home{
+    position: absolute;
+    top: 15%;
+    left: 12%;
+    width: 75%;
+    height: 75%;
+    transform: translate(-50%,);
+    background-image: url('./media/pexels-eberhard-grossgasteiger-1612351.jpg');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-top: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    border: none;
+
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    padding: 100px 0;
+    align-items: center;
+}
+.text{
+    font-size: 3.5em;
+    text-align: center;
+  
+    letter-spacing: 10px;
+}
+.lower-text{
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.social-icons{
+    position: relative;
+    text-decoration: none;
+    font-weight: bolder;
+    margin: 20px;
+  
+  
 }
