--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 
 .nav-a{
     text-decoration: none;
-  
     font-size: 25px;
     margin-left: 20px;
     font-weight: 600;
@@ -49,7 +48,7 @@
     border: 1px solid black;
     border-radius: 10px;
     border: none;
-
+    justify-content: space-between;
 }
 .content{
     display: flex;
@@ -76,4 +75,46 @@
     margin: 20px;
   
   
+}
+.login{
+    width: 450px;
+    position: relative;
+    padding: 100px 30px;
+    backdrop-filter: blur(10px);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.login-input{
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #fff;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    margin: 5px;
+}
+.login-btn{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 15px;
+    background-color: rgb(66, 44, 48);
+    border: none;
+    outline: none;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 7px;
+
+}
+.check{
+    display: flex;
+    justify-content: space-between;
+    margin: 25px;
+    font-weight: bolder;
 }
